chore: fix ruff python lint errors
